2023-03-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c (ProcessMSLScript): Fix use of memory just freed.
	Addresses SourceForge issue #689 "Heap UAF in gm
	(magick/utility.c:3792)"

	* coders/identity.c (ReadIdentityImage): Limit 'order' to a
	maximum of 40, and change to unsigned type in order to avoid
	undefined arithmetic overflow.

	* magick/command.c (MogrifyImage): Handle the case where image and
	region_image are the same.  Addresses SourceForge issue #688 "Heap
	UAF in gm (magick/command.c:11427)".

	* coders/pict.c (WritePICTImage): Fix use of
	MagickFreeResourceLimitedMemory() on non-managed memory. Addresses
	SourceForge issue #687 "Heap Overflow in gm
	(magick/memory.c:728)".

	* magick/command.c (MogrifyImage): Validate that -lat argument is
	correctly formed, and that width and height are not zero.

	* magick/effect.c (AdaptiveThresholdImage): Validate that width
	and height are not zero.  Addresses SourceForge issue #686
	"Floating Point Exception in gm (magick/effect.c:379)".

	* magick/command.c (MogrifyImage): Report a draw argument error if
	drawing primitive is NULL.  Addresses SourceForge issue #684
	"Assertion bug in gm (magick/render.c:2715)"
	(MogrifyImage): Validate colorspace argument.  Addresses
	SourceForge issue #685 Assertion bug in gm
	(magick/colorspace.c:1045)".

	* magick/utility.c (TranslateTextEx): An empty string argument
	should return an empty string rather than a NULL string.

2023-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Stop producing BZip, Gzip, Lzip, and Zstandard
	compressed archives so the only tar option is XZ compressed.  See
	if anyone complains.

	* www/download.rst: Add summary documentation regarding archive formats.

2023-02-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Replace
	MagickAllocateResourceLimitedArray() with
	MagickAllocateResourceLimitedClearedArray() and eliminate explicit
	memset().
